Phase5/negative_tests/prog14.dlp
//Should be void but returns integer


void myFunction() {
    return 5;
}

int main() {
    myFunction();
    return 0;
}